# easydb_server

./: Cargo.toml  Dockerfile  README.en-us.md  README.md  docker-compose.yml
.github/workflows/: workflow.yml
example/: order_1.csv  order_2.csv  user.csv
src/: controllers.rs  database.rs  error.rs  main.rs  sqlite.rs  utils.rs
src/context/: session.rs
src/controller/: product_controller.rs
src/data_source/: context.rs  excel.rs  mod.rs  schema.rs  utils.rs
src/handlers/: product_controller.rs
src/request/: body.rs
src/response/: http_error.rs  mod.rs  schema.rs  utils.rs
src/server/: schema.rs
src/sql/: mod.rs  parse.rs  schema.rs  sql_error.rs
