[package]
name = "easy_db"
version = "0.1.0"
edition = "2018"

[dependencies]
datafusion = { version = "47.0.0",  features = ["backtrace"] }
arrow = "55.0.0"
arrow-array = "55.0.0"
tokio = "1.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.35.0"
once_cell = "1.10.0"